flask endpoints set

--- a/spotify-recs/main.ipynb
+++ b/spotify-recs/main.ipynb
@@ -2,88 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OSError",
-     "evalue": "[Errno 48] Address already in use",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/q9/rltlgwkj7dq7qt_fbzv7sdcw0000gn/T/ipykernel_57395/520182201.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0;31m# auth the spotipy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 53\u001b[0;31m \u001b[0msp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mauthenticate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     54\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;31m# getters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/q9/rltlgwkj7dq7qt_fbzv7sdcw0000gn/T/ipykernel_57395/520182201.py\u001b[0m in \u001b[0;36mauthenticate\u001b[0;34m()\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0;31m# new thread for server\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m     \u001b[0mserver\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mHTTPServer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'localhost'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAuthHandler\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m     \u001b[0mserver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msp_oauth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msp_oauth\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m     server_thread = threading.Thread(\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.10/socketserver.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, server_address, RequestHandlerClass, bind_and_activate)\u001b[0m\n\u001b[1;32m    450\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mbind_and_activate\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    451\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 452\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mserver_bind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    453\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mserver_activate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    454\u001b[0m             \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.10/http/server.py\u001b[0m in \u001b[0;36mserver_bind\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    134\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mserver_bind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    135\u001b[0m         \u001b[0;34m\"\"\"Override server_bind to store the server name.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 136\u001b[0;31m         \u001b[0msocketserver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTCPServer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mserver_bind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    137\u001b[0m         \u001b[0mhost\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mport\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mserver_address\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    138\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mserver_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetfqdn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhost\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.10/socketserver.py\u001b[0m in \u001b[0;36mserver_bind\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    464\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallow_reuse_address\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    465\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetsockopt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSOL_SOCKET\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSO_REUSEADDR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 466\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mserver_address\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    467\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mserver_address\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetsockname\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    468\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mOSError\u001b[0m: [Errno 48] Address already in use"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [07/Sep/2023 14:38:09] \"GET /_next/webpack-hmr HTTP/1.1\" 200 -\n",
-      "----------------------------------------\n",
-      "Exception occurred during processing of request from ('127.0.0.1', 51341)\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/socketserver.py\", line 316, in _handle_request_noblock\n",
-      "    self.process_request(request, client_address)\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/socketserver.py\", line 347, in process_request\n",
-      "    self.finish_request(request, client_address)\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/socketserver.py\", line 360, in finish_request\n",
-      "    self.RequestHandlerClass(request, client_address, self)\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/socketserver.py\", line 747, in __init__\n",
-      "    self.handle()\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/http/server.py\", line 425, in handle\n",
-      "    self.handle_one_request()\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/http/server.py\", line 413, in handle_one_request\n",
-      "    method()\n",
-      "  File \"/var/folders/q9/rltlgwkj7dq7qt_fbzv7sdcw0000gn/T/ipykernel_57395/520182201.py\", line 16, in do_GET\n",
-      "    code = self.path.split(\"?code=\")[1]\n",
-      "IndexError: list index out of range\n",
-      "----------------------------------------\n",
-      "127.0.0.1 - - [07/Sep/2023 14:38:14] \"GET /_next/webpack-hmr HTTP/1.1\" 200 -\n",
-      "----------------------------------------\n",
-      "Exception occurred during processing of request from ('127.0.0.1', 51344)\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/socketserver.py\", line 316, in _handle_request_noblock\n",
-      "    self.process_request(request, client_address)\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/socketserver.py\", line 347, in process_request\n",
-      "    self.finish_request(request, client_address)\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/socketserver.py\", line 360, in finish_request\n",
-      "    self.RequestHandlerClass(request, client_address, self)\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/socketserver.py\", line 747, in __init__\n",
-      "    self.handle()\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/http/server.py\", line 425, in handle\n",
-      "    self.handle_one_request()\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/http/server.py\", line 413, in handle_one_request\n",
-      "    method()\n",
-      "  File \"/var/folders/q9/rltlgwkj7dq7qt_fbzv7sdcw0000gn/T/ipykernel_57395/520182201.py\", line 16, in do_GET\n",
-      "    code = self.path.split(\"?code=\")[1]\n",
-      "IndexError: list index out of range\n",
-      "----------------------------------------\n",
-      "127.0.0.1 - - [07/Sep/2023 14:38:19] \"GET /_next/webpack-hmr HTTP/1.1\" 200 -\n",
-      "----------------------------------------\n",
-      "Exception occurred during processing of request from ('127.0.0.1', 51347)\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/socketserver.py\", line 316, in _handle_request_noblock\n",
-      "    self.process_request(request, client_address)\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/socketserver.py\", line 347, in process_request\n",
-      "    self.finish_request(request, client_address)\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/socketserver.py\", line 360, in finish_request\n",
-      "    self.RequestHandlerClass(request, client_address, self)\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/socketserver.py\", line 747, in __init__\n",
-      "    self.handle()\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/http/server.py\", line 425, in handle\n",
-      "    self.handle_one_request()\n",
-      "  File \"/Users/anushkakulkarni/opt/anaconda3/lib/python3.10/http/server.py\", line 413, in handle_one_request\n",
-      "    method()\n",
-      "  File \"/var/folders/q9/rltlgwkj7dq7qt_fbzv7sdcw0000gn/T/ipykernel_57395/520182201.py\", line 16, in do_GET\n",
-      "    code = self.path.split(\"?code=\")[1]\n",
-      "IndexError: list index out of range\n",
-      "----------------------------------------\n"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/q9/rltlgwkj7dq7qt_fbzv7sdcw0000gn/T/ipykernel_31417/1099774304.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mspotipy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mspotipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moauth2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSpotifyOAuth\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneighbors\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mNearestNeighbors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mwebbrowser\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.10/site-packages/numpy/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    335\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    336\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0mmkl\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 337\u001b[0;31m     \u001b[0m__mkl_version__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"{MajorVersion}.{MinorVersion}.{UpdateVersion}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mmkl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_version\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    338\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    339\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
